# airflow-analytics-plugin

./: .gitignore  MANIFEST.in  README.md  analytics_plugin.py  pyproject.toml  setup.py  test_analytics_plugin.py
astronomer_analytics_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/: analytics-plugin.py
plugins/templates/analytics-plugin/: index.html
src/plugins/: __intit__.py  analytics_plugin.py
src/plugins/templates/analytics_plugin/: index.html
